<resources>
    <string name="app_name">EndevinaNumero</string>
    <string name="button">Guardar</string>
    <string name="textView">Intentos: </string>
    <string name="editText">Inserta un valor entre 0 i 100 </string>
    <string name="textView2">LOGIN / REGISTRO</string>
    <string name="editText2">Mail</string>
    <string name="editText3">Contrasenya</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Registrar</string>
    <string name="buttonForgot">FORGOT PASS?</string>
    <string name="username">Enter your mail here</string>
    <string name="btnAceptar">ACEPTAR</string>
    <string name="btnCancelar">CANCELA</string>
    <string name="txtRecord">TOP PLAYERS</string>
    <string name="btnBack">Atras</string>
</resources>
